freshed-rs-macros/tests/ui_stream/fail/component_children_conflict.stderr
error: children provided both as prop and as child nodes
  --> tests/ui_stream/fail/component_children_conflict.rs:16:36
   |
16 |     let _ = html!(&mut out, <Panel children={text}>{"body"}</Panel>);
   |                                    ^^^^^^^^

error[E0308]: mismatched types
  --> tests/ui_stream/fail/component_children_conflict.rs:16:46
   |
16 |     let _ = html!(&mut out, <Panel children={text}>{"body"}</Panel>);
   |                                              ^^^^ expected `Children`, found `&str`
   |
help: call `Into::into` on this expression to convert `&str` into `Children`
   |
16 |     let _ = html!(&mut out, <Panel children={text.into()}>{"body"}</Panel>);
   |                                                  +++++++
